# nanite-at-home

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  shell.nix
asteroids/: Cargo.toml  build.rs
asteroids-shader/: Cargo.toml
asteroids-shader/src/: lib.rs
asteroids-shader/src/renderer/: mod.rs
asteroids/src/: bootup.rs  delta_time.rs  fps_camera_controller.rs  lib.rs  main.rs  main_loop.rs  mainloop.rs  sample_scene.rs  shader.rs
asteroids/src/renderer/: mod.rs  renderpass3d.rs  zstvertex.rs
asteroids/src/renderer/lodobj/: simple.rs
asteroids/src/sample_scene/: mod.rs
meshlet-renderer/: Cargo.toml
meshlet-renderer/src/: app_focus.rs  curser_lock.rs  debug_settings_selector.rs  delta_time.rs  fps_camera_controller.rs  fps_ui.rs  lib.rs  lod_selector.rs  main.rs  main_loop.rs  nanite_error_selector.rs  sample_scene.rs  sample_scenes.rs  scene_selector.rs  sun_controller.rs
models/: Cargo.toml  Readme.md  build.rs
models/models/Lantern/: LICENSE.md  README.md
models/models/no_seams_bunny/: no_seams_bunny.gltf
models/models/not_a_stanford_bunny/: not_a_stanford_bunny.gltf
models/models/plane/: plane.blend  plane.gltf
models/src/: lib.rs
shader-symbols-builder/: Cargo.toml
shader-symbols-builder/src/: codegen.rs  lib.rs
space-asset/: Cargo.toml
space-asset-disk/: Cargo.toml
space-asset-disk-shader/: Cargo.toml
space-asset-disk-shader/src/: lib.rs  range.rs
space-asset-disk-shader/src/material/: pbr.rs
space-asset-disk-shader/src/meshlet/: indices.rs  lod_level_bitmask.rs  mesh.rs  mod.rs  offset.rs  vertex.rs
space-asset-disk-shader/src/shape/: sphere.rs
space-asset-disk/src/: lib.rs  uploader.rs
space-asset-disk/src/image/: bcn_encoding.rs  codecs.rs  decode.rs  disk.rs  embedded_decoding.rs  image_codecs.rs  image_decoding.rs  image_disk.rs  image_type.rs  metadata.rs  mod.rs  runtime.rs
space-asset-disk/src/material/: pbr.rs
space-asset-disk/src/meshlet/: indices.rs  instance.rs  lod_mesh.rs  mesh.rs  mesh2instance.rs  mod.rs  offset.rs  scene.rs  stats.rs
space-asset-pipeline/: Cargo.toml
space-asset-pipeline/src/: image.rs  lib.rs  main.rs  modnode.rs  uri.rs
space-asset-pipeline/src/gltf/: find.rs  import.rs  uri.rs
space-asset-pipeline/src/image/: encode.rs  image_processor.rs  mod.rs
space-asset-pipeline/src/material/: pbr.rs
space-asset-pipeline/src/meshlet/: build_script.rs  codegen.rs  error.rs  merge.rs  mod.rs  process.rs  tests.rs
space-asset-preprocess/: Cargo.toml
space-asset-preprocess/src/: lib.rs  main.rs  modnode.rs
space-asset-preprocess/src/gltf/: find.rs  import.rs  mod.rs  uri.rs
space-asset-preprocess/src/image/: encode.rs  generate_mips.rs  image_processor.rs  mod.rs
space-asset-preprocess/src/material/: pbr.rs
space-asset-preprocess/src/meshlet/: build_script.rs  lod_mesh.rs  merge.rs  mesh.rs  mod.rs  process.rs  tests.rs
space-asset-rt/: Cargo.toml
space-asset-rt/src/: lib.rs  upload_traits.rs  uploader.rs
space-asset-rt/src/image/: upload.rs
space-asset-rt/src/material/: pbr.rs
space-asset-rt/src/meshlet/: mesh.rs  mesh2instance.rs  mod.rs  scene.rs
space-asset-shader/: Cargo.toml
space-asset-shader/src/: affine_transform.rs  lib.rs  opaque_model.rs
space-asset-shader/src/material/: mod.rs  pbr.rs
space-asset-shader/src/meshlet/: indices.rs  instance.rs  mesh.rs  mesh2instance.rs  mod.rs  model.rs  offset.rs  scene.rs
space-asset/src/: affine_transform.rs  image.rs  lib.rs  uploader.rs
space-asset/src/image/: decode.rs  metadata.rs  mod.rs  size.rs  upload.rs
space-asset/src/meshlet/: indices.rs  instance.rs  mesh.rs  mesh2instance.rs  mod.rs  offset.rs  scene.rs  vertex.rs
space-client/: Cargo.toml  build.rs
space-client/src/: bootup.rs  device_selection.rs  lib.rs  main.rs  vulkan.rs
space-client/src/triangle/: mod.rs  triangle_bootup.rs  triangle_main.rs  triangle_model.rs  triangle_pipeline.rs  triangle_renderpass.rs
space-engine/: Cargo.toml  build.rs
space-engine-common/: Cargo.toml
space-engine-common/src/: lib.rs
space-engine-common/src/renderer/: frame_in_flight.rs  mod.rs
space-engine-shader/: Cargo.toml
space-engine-shader-builder/: Cargo.toml
space-engine-shader-builder/src/: lib.rs
space-engine-shader/src/: lib.rs
space-engine-shader/src/material/: light.rs  mod.rs  pbr.rs  radiance.rs
space-engine-shader/src/renderer/: allocation_buffer.rs  camera.rs  compacting_alloc_buffer.rs  frame_data.rs  g_buffer.rs  lod_selection.rs  mod.rs
space-engine-shader/src/screen_space_old/: directional.rs  major_axis.rs  mod.rs  shared_depth_march.rs
space-engine-shader/src/screen_space_trace/: directional_shadows.rs  major_axis.rs  mod.rs
space-engine-shader/src/utils/: affine.rs  animated_segments.rs  gpurng.rs  hsv.rs  lerp.rs  mod.rs  srgb.rs
space-engine/src/: application_config.rs  lib.rs  pipeline_cache.rs  shader.rs
space-engine/src/device/: debug.rs  init.rs  mod.rs  queue_allocation_helper.rs
space-engine/src/reinit/: dependency.rs  internal.rs  macros.rs  mod.rs  no_restart.rs  reinit.rs  reinit1.rs  reinitref.rs  target.rs  tests.rs  variants.rs
space-engine/src/reinit_old/: dependency.rs  mod.rs  reinit1.rs
space-engine/src/render/: mod.rs
space-engine/src/renderer/: compacting_alloc_buffer.rs  frame_context.rs  mod.rs  queue_allocation.rs  renderer_plugin.rs
space-engine/src/screen_space_trace/: mod.rs  screen_space_shadows.rs
space-engine/src/space/: bootup.rs  cli_args.rs  engine_config.rs  mod.rs  queue_allocation.rs
space-engine/src/vulkan/: debug.rs  init.rs  mod.rs  pipeline_cache.rs  platform.rs  queue_allocation_helper.rs  queue_allocator.rs  validation_layers.rs
space-engine/src/window/: event_loop.rs  mod.rs  swapchain.rs  window_plugin.rs  window_ref.rs
vulkano-bindless/vulkano-bindless/: Cargo.toml
vulkano-bindless/vulkano-bindless-shaders/: Cargo.toml
vulkano-bindless/vulkano-bindless-shaders/src/: buffer_content.rs  desc_buffer.rs  lib.rs  param.rs
vulkano-bindless/vulkano-bindless/src/: desc_buffer.rs  frame_manager.rs  lib.rs  required_features.rs  sync.rs
(+216 files in other folders)
