[package]
name = "asteroids-shader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
# my projects
asteroids-common = { path = "../asteroids-common" }

bytemuck = { workspace = true }
spirv-std = { workspace = true }
