[package]
name = "asteroids"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
asteroids-shader = { workspace = true }
space-engine = { workspace = true }
space-engine-shader = { workspace = true }
vulkano-bindless = { workspace = true }

# vulkan
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
futures = { workspace = true }
smol = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# other
static_assertions = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }

[build-dependencies]
space-engine-shader-builder = { path = "../space-engine-shader-builder" }
