[package]
name = "asteroids"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-asset = { workspace = true }
space-engine = { workspace = true }
space-engine-shader = { workspace = true }
vulkano-bindless = { workspace = true }

# vulkan
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
futures = { workspace = true }
smol = { workspace = true }

# model loader
image = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# profiling
profiling = { workspace = true }
puffin_http = { workspace = true }

# other
static_assertions = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }

[build-dependencies]
space-asset = { workspace = true }
space-asset-pipeline = { workspace = true }
futures = { workspace = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "vulkano-bindless/profile-with-puffin", "space-engine/profile-with-puffin", "space-asset/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick", "vulkano-bindless/profile-with-optick", "space-engine/profile-with-optick", "space-asset/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal", "vulkano-bindless/profile-with-superluminal", "space-engine/profile-with-superluminal", "space-asset/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing", "vulkano-bindless/profile-with-tracing", "space-engine/profile-with-tracing", "space-asset/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy", "vulkano-bindless/profile-with-tracy", "space-engine/profile-with-tracy", "space-asset/profile-with-tracy"]
