[package]
name = "meshlet-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
models = { workspace = true }
space-asset = { workspace = true }
space-engine = { workspace = true }
space-engine-shader = { workspace = true }
vulkano-bindless = { workspace = true }

# device
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }

# async
async-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

# profiling
profiling = { workspace = true }
puffin_http = { workspace = true }

# other
static_assertions = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }

[build-dependencies]
space-asset = { workspace = true }
space-asset-pipeline = { workspace = true }
profiling = { workspace = true }
puffin_http = { workspace = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
