[package]
name = "meshlet-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
models = { workspace = true }
space-asset-disk = { workspace = true }
space-asset-rt = { workspace = true }
space-asset-shader = { workspace = true }
space-engine = { workspace = true }
space-engine-shader = { workspace = true }
rust-gpu-bindless = { workspace = true, features = ["ash"] }
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }

# device
winit = { workspace = true }

# async
async-std = { workspace = true }

# bytes and numbers
glam = { workspace = true }
num-traits = { workspace = true }

# profiling
profiling = { workspace = true }
puffin_http = { workspace = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
