[package]
name = "meshlet-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "meshlet-renderer"

[dependencies]
# my projects
models = { workspace = true }
space-asset-disk = { workspace = true }
space-asset-rt = { workspace = true }
space-asset-shader = { workspace = true }
space-engine = { workspace = true }
space-engine-shader = { workspace = true }
rust-gpu-bindless = { workspace = true, features = ["ash"] }
rust-gpu-bindless-winit = { workspace = true, features = ["ash"] }
rust-gpu-bindless-egui = { workspace = true, features = ["winit"] }

# vulkan
ash = { workspace = true }
winit = { workspace = true }

# bytes and numbers
glam = { workspace = true }
num-traits = { workspace = true }

# async
rayon = "1.10"

# profiling
profiling = { workspace = true }
puffin_http = { workspace = true, optional = true }

# egui
egui = { workspace = true }

# other
anyhow = { workspace = true }
parking_lot = { workspace = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
