[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
space-asset-disk = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
space-asset-preprocess = { workspace = true }
profiling = { workspace = true }
