[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
space-asset = { workspace = true, features = ["disk"] }

[build-dependencies]
anyhow = { workspace = true }
space-asset-pipeline = { workspace = true }
profiling = { workspace = true }
