[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
space-asset-disk = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
space-asset-preprocess = { workspace = true }
profiling = { workspace = true }
puffin_http = { workspace = true, optional = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "dep:puffin_http"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
