[package]
name = "shader-symbols-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["use-installed-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
use-pretty-print = ["syn", "prettyplease"]

[dependencies]
spirv-builder = { workspace = true }
smallvec = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

# feature use-pretty-print
syn = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
