[package]
name = "space-asset-disk-shader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
disk = ["dep:rkyv", "glam/rkyv"]

[dependencies]
# members
rust-gpu-bindless-macros = { workspace = true }
rust-gpu-bindless-buffer-content = { workspace = true }

# profiling
profiling = { workspace = true }

# bytes and numbers
glam = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# serde
rkyv = { workspace = true, optional = true }

# other
static_assertions = { workspace = true }
