[package]
name = "space-asset-disk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
image_decoding = ["image"]
image_png_decoding = ["image_decoding", "image/png"]
image_jpeg_decoding = ["image_decoding", "image/jpeg"]
image_bcn_encoding = ["intel_tex_2"]

[dependencies]
# members
space-asset-disk-shader = { workspace = true, features = ["disk"] }
rust-gpu-bindless-macros = { workspace = true }
rust-gpu-bindless-buffer-content = { workspace = true }

# async
rayon = { workspace = true }

# model loader
image = { workspace = true, optional = true }
intel_tex_2 = { workspace = true, optional = true }

# bytes and numbers
glam = { workspace = true, features = ["rkyv"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# serde
rkyv = { workspace = true }
zstd = { workspace = true }

# profiling
profiling = { workspace = true }

# other
static_assertions = { workspace = true }
num_enum = { workspace = true }
