[package]
name = "space-asset-pipeline"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-asset = { workspace = true, features = ["disk"] }

# model loader
gltf = { workspace = true }
image = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# serde
rkyv = { workspace = true }
zstd = { workspace = true }

# other
static_assertions = { workspace = true }
smallvec = { workspace = true }
