[package]
name = "space-asset-pipeline"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-asset = { workspace = true, features = ["disk"] }

# async
futures = { workspace = true }
rayon = { workspace = true }

# model loader
gltf = { workspace = true }
image = { workspace = true }
meshopt = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
memoffset = { workspace = true }

# serde
rkyv = { workspace = true }
zstd = { workspace = true }

# profiling
profiling = { workspace = true }
puffin_http = { workspace = true }

# other
parking_lot = { workspace = true }
static_assertions = { workspace = true }
smallvec = { workspace = true }
clap = { workspace = true }

[features]
profile-with-puffin = ["profiling/profile-with-puffin", "space-asset/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick", "space-asset/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal", "space-asset/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing", "space-asset/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy", "space-asset/profile-with-tracy"]
