[package]
name = "space-asset-preprocess"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# my projects
space-asset-disk = { workspace = true, features = ["disk"] }

# async
rayon = { workspace = true }

# model loader
gltf = { workspace = true }
zune-image = { workspace = true }
meshopt = { workspace = true }
intel_tex_2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
memoffset = { workspace = true }

# codegen
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }

# serde
rkyv = { workspace = true }
zstd = { workspace = true }

# profiling
profiling = { workspace = true }

# other
parking_lot = { workspace = true }
static_assertions = { workspace = true }
smallvec = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
