[package]
name = "space-asset-rt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
space-asset-disk = { workspace = true }
space-asset-shader = { workspace = true }
rust-gpu-bindless = { workspace = true, features = ["primary"] }
rust-gpu-bindless-shaders = { workspace = true }

# model loader
zune-image = { workspace = true }

# bytes and numbers
glam = { workspace = true }

# serde
rkyv = { workspace = true }

# async
futures = { workspace = true }
rayon = { workspace = true }
pollster = { workspace = true }

# profiling
profiling = { workspace = true }

# other
anyhow = { workspace = true }
