[package]
name = "space-asset-shader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
space-asset-disk-shader = { workspace = true }
rust-gpu-bindless-macros = { workspace = true }
rust-gpu-bindless-shaders = { workspace = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
