[package]
name = "space-asset"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# members
vulkano-bindless = { workspace = true, optional = true }
vulkano-bindless-macros = { workspace = true }
vulkano-bindless-shaders = { workspace = true }

# vulkan
vulkano = { workspace = true, optional = true }

# async
futures = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# bytes and numbers
glam = { workspace = true }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }

# serde
rkyv = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# profiling
profiling = { workspace = true }

# other
static_assertions = { workspace = true }

[features]
disk = ["dep:rkyv", "dep:zstd"]
runtime = ["disk", "dep:vulkano-bindless", "dep:vulkano", "dep:futures", "dep:rayon"]
